improved updater: support for spaces in and special characters improved